Fix 'Prestige Base in skin previews' not correctly working, rename 'Trap Background' to 'Trap Gradient Background' and fix interaction, fix wooden base alignment

--- a/src/modules/experiments/modules/trap-background/styles.css
+++ b/src/modules/experiments/modules/trap-background/styles.css
@@ -6,5 +6,5 @@
 }
 
 .itembrowser-skin-image-wrapper {
-  background: url(https://www.mousehuntgame.com/images/items/bases/trap_small/a44d6a59ca9c0d11224bb36fd4e16378.png), linear-gradient(0deg, #eee2b4 0%, #b1e0d1 100%);
+  background-image: url(https://www.mousehuntgame.com/images/items/bases/trap_small/a44d6a59ca9c0d11224bb36fd4e16378.png), linear-gradient(0deg, #eee2b4 0%, #b1e0d1 100%);
 }
