--- a/src/modules/experiments/modules/use-pb-as-skin-preview-base/styles-trap-background.css
+++ b/src/modules/experiments/modules/use-pb-as-skin-preview-base/styles-trap-background.css
@@ -1,3 +1,3 @@
 .itembrowser-skin-image-wrapper {
-  background: url(https://www.mousehuntgame.com/images/items/bases/trap_small/ff3bf3e54a4acf164085b3240910d0ef.png), linear-gradient(0deg, #eee2b4 0%, #b1e0d1 100%);
+  background-image: url(https://www.mousehuntgame.com/images/items/bases/trap_small/ff3bf3e54a4acf164085b3240910d0ef.png), linear-gradient(0deg, #eee2b4 0%, #b1e0d1 100%);
 }
